--- a/Movie_Site/src/Movie_Site/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,34 +1,41 @@
 ﻿@model ExternalLoginConfirmationViewModel
-@{
-    ViewData["Title"] = "Register";
-}
 
-<h2>@ViewData["Title"].</h2>
-<h3>Associate your @ViewData["LoginProvider"] account.</h3>
-
-<form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Association Form</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-
-    <p class="text-info">
-        You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-        Please enter an email address for this site below and click the Register button to finish
-        logging in.
-    </p>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+<!-- Section -->
+<section class="md-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 col-xl-8 offset-0 offset-sm-0 offset-md-0 offset-lg-1 offset-xl-2 ">
+                <form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                    <!-- title-01 -->
+                    <div class="title-01 title-01__style-04">
+                        <h6 class="title-01__subTitle">Register</h6>
+                        <h2 class="title-01__title">Associate your @ViewData["LoginProvider"] account.</h2>
+                        <div>
+                            You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
+                            Please enter an email address for this site below and click the Register button to finish
+                            logging in.
+                        </div><br />
+                        <center>
+                            <div class="form-group">
+                                <strong><label asp-for="Email" class="col-md-2 control-label"></label></strong>
+                                <div class="col-md-10">
+                                    <input asp-for="Email" class="form-control" />
+                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <button type="submit" class="btn btn-default">Register</button>
+                                </div>
+                            </div>
+                        </center>
+                    </div><!-- End / title-01 -->
+                </form>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
-        </div>
-    </div>
-</form>
+</section>
+<!-- End / Section -->
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
