--- a/Movie_Site/src/Movie_Site/Views/Shared/_LoginPartial.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,22 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Movie_Site.Models
+@using System.Collections.Generic
+@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Http.Authentication
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+@* NOT TESTED *@
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
-            </li>
-        </ul>
-    </form>
+    <li>
+        <a asp-area="" asp-controller="Account" asp-action="Logout">@UserManager.GetUserName(User)</a>
+    </li>
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
-    </ul>
+    <li>
+        <a asp-area="" asp-controller="Account" asp-action="Login">Log in</a>
+    </li>
 }
