--- a/Movie_Site/src/Movie_Site/Views/Shared/_Layout.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                             <a asp-area="" asp-controller="Home" asp-action="about">about</a>
                         </li>
                         <li class="menu-item-has-children">
-                            <a href="#">booking</a>
+                            <a href="#">lists</a>
                             <ul class="sub-menu">
                                 <li>
                                     <a asp-area="" asp-controller="Movies" asp-action="Index">Movies</a>
