--- a/Movie_Site/src/Movie_Site/Views/Movies/selectCineplex.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Movies/selectCineplex.cshtml
@@ -11,7 +11,8 @@
 
                 <!-- title-01 -->
                 <div class="title-01 title-01__style-04">
-                    <h2 class="title-01__title">List of Cineplexes</h2>
+                    <h6 class="title-01__subTitle"><a asp-area="" asp-controller="Movies" asp-action="index">@ViewBag.MovieTitle</a> ></h6>
+                    <h2 class="title-01__title">Select Cineplex</h2>
                 </div><!-- End / title-01 -->
             </div>
         </div>
