--- a/Movie_Site/src/Movie_Site/Views/Movies/selectCineplex.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Movies/selectCineplex.cshtml
@@ -4,7 +4,7 @@
     
     CANT SEEM TO MANUALLY GO TO THIS PAGE *@
 
-<section class="md-section">
+<section class="md-section" style="padding-bottom:15px;">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 offset-0 offset-sm-0 offset-md-0 offset-lg-1 offset-xl-2 ">
