--- a/Movie_Site/src/Movie_Site/Views/SessionTimes/Index.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/SessionTimes/Index.cshtml
@@ -6,7 +6,7 @@
             <div class="col-lg-6 ">
                 <!-- title-01 -->
                 <div class="title-01 title-01__style-03 md-text-left">
-                    <h6 class="title-01__subTitle">MOVIE NAME HERE</h6>
+                    <h6 class="title-01__subTitle">MOVIE NAME HERE @*@ViewBag.MovieTitle > @ViewBag.Cineplex >*@</h6>
                     <h2 class="title-01__title">Session Times</h2>
                     <div>
                         <table cellpadding="10">
@@ -29,7 +29,7 @@
                                         @item.MovieTime.ToString("dd MMMM")
                                     </td>
                                     <td>
-                                        <button>BOOK</button>
+                                        <button class="btn btn-default">BOOK</button>
                                     </td>
                                 </tr>
                                     
