Complete nav between movie/cineplex/times

--- a/Movie_Site/src/Movie_Site/Views/Movies/Index.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Movies/Index.cshtml
@@ -28,11 +28,11 @@
 
                         @* In order to use onclick to submit dynamic forms, I had to create different form names
                             Using the same form names resulted in only the first variable to be posted. *@
-                            <form id="Select @item.MovieId" asp-controller="Movies" asp-action="SelectCineplex" method="post">
+                            <form id="Movie @item.MovieId" asp-controller="Movies" asp-action="SelectCineplex" method="post">
                                 <input type="hidden" value="@item.MovieId" name="id" />
                                 
                                     <div class="textbox__image">
-                                        <a href="#" onclick="document.forms['Select @item.MovieId'].submit();">
+                                        <a href="#" onclick="document.forms['Movie @item.MovieId'].submit();">
                                             <img class="" src="@item.ImageUrl" alt="" />
                                         </a>
                                     </div>
