--- a/Movie_Site/src/Movie_Site/Views/Shared/Error.cshtml
+++ b/Movie_Site/src/Movie_Site/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewData["Title"] = "Error";
 }
 
@@ -11,4 +11,25 @@
 </p>
 <p>
     <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+</p>*@
+
+<div class="md-content">
+    <div class="consult-404">
+        <div class="md-tb">
+            <div class="md-tb__cell">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 offset-0 offset-sm-0 offset-md-0 offset-lg-1 ">
+                            <div class="consult-404__content">
+                                <img src="assets/img/404.jpg" alt="">
+                                <h1>404</h1>
+                                <h2>404 Opps! Page not found </h2>
+                                <p>It looks like nothing was found at this location. Click the link to return <a asp-area="" asp-controller="Home" asp-action="index">Home Page.</a> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
